--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -30,13 +30,9 @@
 
 
 
-
 </head>
 
 <body class="planecursor">
-
-
-
 
 	<div id="container">
 
@@ -62,14 +58,25 @@ stuff here
 {% includeJsFile "https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" %}
 {% includeJsFile "js/instafeed.min.js" %}
 {% includeJsFile "js/owl.carousel.min.js" %}
-{% includeJsFile "js/jquery.waypoints.min.js" %}
+{% includeJsFile "js/jquery.sticky.js" %}
+
+
+
+
 {% includeJsFile "js/main.js" %}
+
+
+
+
 
 
 <script src="https://widgets.resy.com/embed.js"></script>
 <script>
     resyWidget.addButton(document.getElementById('resyButton-w6cxoffp'), {"venueId":661,"apiKey":"5Sbh49jsnE05KjGFluXWWCTKXwYvF6qV","replace":true});
 </script>
+
+
+
 
 
 
