--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -375,37 +375,7 @@ height: 100%;
 
 
 
-<div style="display:none;">
 
-
-    <div id="page-wrapper">
-      <div id="form-messages"></div>
-
-        <form id="ajax-contact" method="post" action="mailer.php">
-            <div class="field">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-
-            <div class="field">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-
-            <div class="field">
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
-
-            <div class="field">
-                <button type="submit">Send</button>
-            </div>
-        </form>
-    </div>
-
-
-
-</div>
 
 
 
@@ -435,12 +405,15 @@ height: 100%;
 
 {% from _self import errorList %}
 
-<!-- <form method="post" action="" accept-charset="UTF-8" style="position:relative;"> -->
 
 
 <form id="ajax-contact" method="post" action="mailer.php" style="position:relative;">
-
     {{ getCsrfInput() }}
+
+
+
+<input type="hidden" name="toEmail" value="{{ 'joe.waine@gmail.com'|hash }}">
+
     <input type="hidden" name="action" value="contactForm/sendMessage">
     <!-- <input type="hidden" name="redirect" value="contact/thanks"> -->
 
