--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,10 @@
 /*thicker fonts*/
 
 
+nav ul a{
+   -webkit-font-smoothing: antialiased !important;
+}
+
 body{
     background: url(../img/clouds.jpg);
     font-family: 'Avenir LT Std 45 Book';
@@ -219,7 +223,7 @@ float: right
     background-image: url(../img/hours-bg.svg);
     background-repeat: no-repeat;
     text-align: center;
-    width: 940px;
+    width: 938px;
     height: 185px;
     margin: 0 auto;
     padding: 25px 0 0;
@@ -229,7 +233,7 @@ float: right
 .schedule .hours{
 
   color: #EC1C24;
-  font-size: 23px;
+  font-size: 22px;
   margin-bottom: 26px;
   font-family: 'Avenir LT Std 65 Medium';
   line-height: 32px;
@@ -851,7 +855,8 @@ input:focus {
     padding-right: 30px;
 }
 .item-single{
-  width: 230px;
+  /*width: 230px;*/
+  width: 100%;
   height: 230px;
   float: left;
   position: relative;
@@ -911,6 +916,12 @@ input:focus {
   width: 1558px;
   margin: 0 auto;
 }
+
+
+.item-row.itemized{
+  width: 1596px;
+}
+
 
 .item-description{
   display: none;
@@ -1078,7 +1089,7 @@ footer{
   background-color: rgba(0,0,0,.5);
   position: fixed;
   top: 0;
-  z-index: 2000;
+  z-index: 20000;
 }
 
 
@@ -1233,11 +1244,11 @@ body.fixedwaypoint{
 }
 
 .contact-item-text {
-    width: 206px;
+    width: 204px;
     float: right;
     font-size: 23px;
     text-align: center;
-    padding-top: 93px;
+    padding-top: 90px;
 }
 
 
@@ -1276,7 +1287,7 @@ body.fixedwaypoint{
   content: "reserve online";
   color: white !important;
   width: 100px !important;
-  font-size: 26px;
+  font-size: 25px;
 }
 
 
@@ -1308,11 +1319,16 @@ body.fixedwaypoint{
 
 
 .item-single{
-      margin-right: 35px;
+      /*margin-right: 35px;*/
+
+
+    /*margin-right: 18px;*/
+    /*margin-left: 18px;*/
+
 }
 
 .item-single:nth-child(6n+6){
-  margin-right: 0;
+  /*margin-right: 0;*/
 
 }
 
@@ -1338,6 +1354,71 @@ body.fixedwaypoint{
 .hide-on-desk {
     padding-bottom: 10px;
 }
+
+nav ul li{
+
+    float: left;
+    margin: 10px 28px;
+
+}
+
+
+nav ul li:first-child{
+  /*margin-left: 0;*/
+}
+
+nav ul li:last-child{
+  margin-right: 0;
+}
+
+
+.hours p{
+  margin-top: 0;
+  margin-bottom: 0;
+    margin-bottom: 6px;
+}
+
+.schedule .hours{
+      margin-bottom: 22px;
+
+}
+
+
+
+/*items logic*/
+
+
+
+.item-spacer{
+  width:16.66%;
+  float:left;
+}
+.side-spacer{
+    width: 6%;
+    float: left;
+    font-size: 1px;
+    color: transparent;
+
+}
+
+.middle-spacer{width: 88%;float:left;}
+
+
+@media only screen and (max-width: 1596px) {
+
+
+
+.item-row.itemized{
+width: 100%;
+
+}
+
+
+}
+
+
+
+
 
 @media only screen and (max-width: 1560px) {
 
@@ -1391,10 +1472,20 @@ form input[type="submit"] {
      right: -24px;
   }
 
+
+
+.item-spacer {
+    width: 20%;
+  }
+
+
 }
 
 
 @media only screen and (max-width: 1280px) {
+
+
+
 
   .panels.one {
     margin: 40px;
@@ -1455,6 +1546,11 @@ nav a{
 
 @media only screen and (max-width: 960px) {
 
+
+.item-spacer {
+  width: 25%;
+}
+
 footer{
   height: 116px;
 }
@@ -1511,6 +1607,11 @@ footer{
 @media only screen and (max-width: 768px) {
 
 
+  .item-spacer {
+  width: 33.33%;
+}
+
+
 
 .hide-on-desk{display: block;}
 
@@ -1564,7 +1665,7 @@ nav ul{
 }
 
 .item-single {
-    width: 46%;
+    /*width: 46%;*/
     height: 230px;
     float: left;
     position: relative;
@@ -1824,6 +1925,14 @@ margin-top: -25px;
 
 @media only screen and (max-width: 660px) {
 
+
+  .item-spacer {
+  width: 50%;
+}
+
+
+
+
   .family-member {
     background-position: center center;
     height: 100px;
@@ -1947,7 +2056,7 @@ section.menu {
 
 .modal {
     width: 86%;
-    margin-top: 6px;
+    margin-top: 10px;
 }
 
 
@@ -2030,6 +2139,11 @@ form input[type="submit"] {
 .slideshow-box-text p {
     font-size: 16px;
     line-height: 30px;
+}
+
+
+.side-spacer{
+  width: 0;
 }
 
 
@@ -2123,3 +2237,13 @@ form input[type="submit"] {
   background: green;
   width: 100%;
 }
+
+
+nav.mobile-nav ul li:first-child{
+
+    /* margin-left: 0; */
+    margin: auto;
+
+
+}
+
