--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -138,7 +138,7 @@ twitter
 
 {% for scheduleitems in craft.entries.section('scheduleModule') %}
 {{ scheduleitems.line1 }}
-<br>
+<!-- <br> -->
 {{ scheduleitems.line2 }}
 </div>
 <div class="address">
@@ -382,6 +382,40 @@ height: 100%;
 
 
 
+<div style="display: none;">
+
+
+    <div id="page-wrapper">
+      <h1>AJAX Contact Form Demo</h1>
+
+      <div id="form-messages"></div>
+
+        <form id="ajax-contact" method="post" action="mailer.php">
+            <div class="field">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+
+            <div class="field">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+
+            <div class="field">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+            </div>
+
+            <div class="field">
+                <button type="submit">Send</button>
+            </div>
+        </form>
+    </div>
+
+
+
+
+</div>
 
 
 
@@ -492,7 +526,7 @@ height: 100%;
 <div class="our-family-header">
     our family
 </div>
-<div class="item-row">
+<div class="item-row itemized">
 <div class="item-container">
 
 <div class="clearfix">
@@ -506,6 +540,14 @@ height: 100%;
 <!-- potential first loop  -->
 {% for member in craft.entries.section('ourFamily') %}
     {% for asset in member.image %}
+
+
+<div class="item-spacer">
+<div class="side-spacer">_</div>
+
+<div class="middle-spacer">
+
+
         <div class="item-single" style="background-image:url({{ asset.getUrl('thumb') }});" data-image="{{ asset.url }}">
     {% endfor %}
 <div class="item-name">
@@ -515,6 +557,14 @@ height: 100%;
 {{ member.body }}
 </div>
 </div>
+
+</div>
+
+<div class="side-spacer">_</div>
+</div>
+
+
+
 {% endfor %}
 <!-- potential first loop -->
 <!-- list -->
@@ -522,8 +572,11 @@ height: 100%;
 
 
 
-</div>
 
+
+
+
+</div>
 
 <div class="expand-button-container">
 <div class="expand-button members">
@@ -532,7 +585,7 @@ height: 100%;
 </div>
 
 
-</div></div>
+</div>
 </section>
 
 
@@ -547,7 +600,7 @@ height: 100%;
     media
 </div>
 
-<div class="item-row">
+<div class="item-row itemized">
 <div class="item-container">
 
 <div class="clearfix">
@@ -559,6 +612,12 @@ height: 100%;
 <!-- potential first loop  -->
 {% for mediaitem in craft.entries.section('media') %}
 {% for asset in mediaitem.image %}
+
+<div class="item-spacer">
+<div class="side-spacer">_</div>
+
+<div class="middle-spacer">
+
         <div class="item-single" style="background-image:url({{ asset.getUrl('thumb') }});" data-image="{{ asset.url }}">
     {% endfor %}
 <div class="item-name">
@@ -575,6 +634,21 @@ height: 100%;
 <div class="press-link">{{ mediaitem.pressLinkUrl }}</div>
 
 </div>
+
+
+
+</div>
+
+
+
+    <div class="side-spacer">
+        _
+    </div>
+
+
+
+</div>
+
 {% endfor %}
 <!-- potential first loop -->
 <!-- list -->
@@ -585,12 +659,16 @@ height: 100%;
 
 </div>
 
+
+
+
+</div>
+
 <div class="expand-button articles">
     expand
 </div>
 
 
-</div>
 </section>
 
 <!-- our family -->
