--- a/craft/templates/index-previous.html
+++ b/craft/templates/index-previous.html
@@ -401,6 +401,47 @@ height: 100%;
 <div class="events-form">
 
 
+{% from _self import errorList %}
+
+
+
+<form id="ajax-contact" method="post" action="" style="position:relative;">
+    {{ getCsrfInput() }}
+    <input type="hidden" name="action" value="contactForm/sendMessage">
+    <!-- <input type="hidden" name="redirect" value="contact/thanks"> -->
+
+    <!-- <h3><label for="fromName">Your Name</label></h3> -->
+
+    <input placeholder="name" id="fromName" type="text" name="fromName" value="{% if message is defined %}{{ message.fromName }}{% endif %}">
+ {{ message is defined and message ? errorList(message.getErrors('fromName')) }}
+
+    <!-- <h3><label for="fromEmail">Your Email</label></h3> -->
+    <input placeholder="email" id="fromEmail" type="email" name="fromEmail" value="{% if message is defined %}{{ message.fromEmail }}{% endif %}">
+    {{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
+
+
+
+    <!-- <h3><label for="subject">Subject</label></h3> -->
+
+
+
+    <input placeholder="subject" id="subject" type="text" name="subject" value="{% if message is defined %}{{ message.subject }}{% endif %}">
+    {{ message is defined and message ? errorList(message.getErrors('subject')) }}
+
+
+
+
+
+
+
+    <!-- <h3><label for="message">Message</label></h3> -->
+     <textarea placeholder="message" rows="10" cols="40" id="message" name="message">{% if message is defined %}{{ message.message }}{% endif %}</textarea>
+    {{ message is defined and message ? errorList(message.getErrors('message')) }}
+ <!--    <input type="submit" value="Send"> -->
+</form>
+
+
+
 <!-- second form -->
 
     <div id="page-wrapper">
