--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1473,6 +1473,7 @@ width: 100%;
     position: relative;
     margin-bottom: -105px;
     z-index: 10000;
+
   }
 
 
@@ -1490,7 +1491,7 @@ width: 100%;
     right: 0;
     top: 0;
     border: 0;
-    /* background: transparent; */
+     background: transparent;
     right: 10px;
     top: 50%;
     margin-top: -16px;
@@ -1676,7 +1677,18 @@ footer{
 
 
 
+
+
+
+
 @media only screen and (max-width: 860px) {
+
+
+
+.announcements p{
+  width: 100%;
+}
+
   .menu-tabs li:first-child,
 .menu-tabs li:last-child{
       width: 0;
