--- a/public/css/style.css
+++ b/public/css/style.css
@@ -772,7 +772,7 @@ form input[type="email"] {
 form textarea,
 form input[type="text"],
 form input[type="email"]{
-    background: #F7D151;
+      background: #F7D151;
     color: #434444;
     width: 530px;
     display: block;
@@ -783,7 +783,10 @@ form input[type="email"]{
     margin-bottom: 36px;
     resize: none;
     position: relative;
+    border-radius: 0 !important;
 }
+
+
 
 form input[type="submit"]{
     width: 100px;
