--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -129,7 +129,7 @@ twitter
 </div>
 </div>
 <div class="contact-item">
-<div class="contact-item-text">
+<div class="contact-item-text for-tel">
 <a href="tel:+12064578287">206 457 8287</a>
 </div>
 </div>
