--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1740,8 +1740,11 @@ form textarea, form input[type="text"], form input[type="email"] {
 .schedule{
   background: #FDE66C;
   border-bottom: 10px solid #47626D;
-  height: 145px;
+  /*height: 145px;*/
   width: 100%;
+
+    min-height: 130px;
+
 }
 
 
@@ -2215,7 +2218,7 @@ img.logo {
     line-height: 3.2;
     padding-left: 14px;
     padding-right: 14px;
-    font-size: 16px;
+    font-size: 12px;
     color: white;
     margin-right: -8px;
     margin-left: -8px;
