email form member

--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -441,8 +441,8 @@ height: 100%;
 
             <div class="field">
                 <!-- <label for="message">Message:</label> -->
+                <input type="submit" value="Send" style="z-index: 1000;">
                 <textarea placeholder="message" id="message" name="message" required></textarea>
-                <input type="submit" value="Send">
             </div>
 <!--
             <div class="field">
