--- a/public/css/style.css
+++ b/public/css/style.css
@@ -779,7 +779,7 @@ form input[type="email"]{
     display: block;
     border: 0;
     padding: 8px;
-    padding-left: 16px;
+    padding-left: 12px;
     padding-top: 10px;
     margin-bottom: 36px;
     resize: none;
@@ -801,7 +801,7 @@ form input[type="submit"]{
     position: absolute;
     bottom: 0px;
     /* right: -24px; */
-    right: 6px;
+    right: 10px;
     border: 0;
     color: transparent;
     background: transparent;
@@ -827,19 +827,19 @@ input:focus {
 
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #434444;
+  color: transparent;
   font-size: 18.75px;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: #434444;
+  color: transparent;
   font-size: 18.75px;
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: #434444;
+  color: transparent;
   font-size: 18.75px;
 }
 :-moz-placeholder { /* Firefox 18- */
-  color: #434444;
+  color: transparent;
   font-size: 18.75px;
 }
 
@@ -1488,6 +1488,8 @@ width: 100%;
     margin-bottom: -105px;
     z-index: 9999;
 
+
+
   }
 
 
@@ -1572,6 +1574,102 @@ border-radius: 0 !important;
 }
 
 
+.field{
+  position: relative;
+}
+
+
+.field.for-message:before  {
+      background: #F7D151;
+      color: #434444;
+    content: "message";
+    width: 98px;
+    height: 20px;
+    margin-top: 10px;
+    left: 0;
+    z-index: 100;
+    position: absolute;
+    top: -10px;
+    font-size: 18.75px;
+    padding-top: 9.5px;
+  }
+
+
+.field.for-subject:before  {
+      background: #F7D151;
+      color: #434444;
+    content: "subject";
+    width: 87px;
+    height: 20px;
+    margin-top: 10px;
+    left: 0;
+    z-index: 100;
+    position: absolute;
+    top: -10px;
+    font-size: 18.75px;
+    padding-top: 8.5px;
+
+  }
+
+
+
+.field.for-email:before  {
+    background: #F7D151;
+    color: #434444;
+    content: "email";
+    width: 73px;
+    height: 27px;
+    margin-top: 10px;
+    left: 0;
+    z-index: 100;
+    position: absolute;
+    top: -10px;
+    font-size: 18.75px;
+    padding-top: 8.5px;
+
+  }
+
+
+
+.field.for-name:before  {
+    background: #F7D151;
+    color: #434444;
+    content: "name";
+    width: 73px;
+    height: 20px;
+    margin-top: 10px;
+    left: 0;
+    z-index: 100;
+    position: absolute;
+    top: -10px;
+    font-size: 18.75px;
+    padding-top: 8.5px;
+
+  }
+
+
+
+
+.field.for-name input,
+.field.for-email input,
+.field.for-subject input,
+.field textarea{
+  text-indent: 86px;
+   line-height: 24px;
+
+}
+
+
+.field textarea{
+      padding-top: 10px;
+}
+
+
+.little-message-label{
+  width: 100px;
+  background: pink;
+}
+
 
 @media only screen and (max-width: 1560px) {
 
@@ -1601,8 +1699,6 @@ border-radius: 0 !important;
 
 form input[type="text"], form input[type="email"] {
     background: #F7D151;
-    color: #434444;
-    /*width: 100%;*/
     display: block;
     border: 0;
     padding: 8px;
@@ -1705,7 +1801,7 @@ form textarea, form input[type="text"], form input[type="email"] {
 
 
 form input[type="submit"] {
-    right: -7px;
+   right: -1px;
 }
 
 }
@@ -1769,7 +1865,7 @@ form textarea, form input[type="text"], form input[type="email"] {
 
 
 form input[type="submit"] {
-    right: -24px;
+right: -21px;
 }
 
 
@@ -2137,6 +2233,8 @@ margin-top: -25px;
     position: fixed;
     bottom: 0;
     min-height: 100px;
+
+    padding-top: 34px;
 }
 
 
@@ -2363,14 +2461,14 @@ section.menu {
 
   form textarea, form input[type="text"], form input[type="email"]{
     background: #F7D151;
-    color: #434444;
+     color: #0524d8;
     width: 96%;
     display: block;
     border: 0;
     padding: 8px;
-    padding-left: 16px;
+    padding-left: 12px;
     padding-top: 12px;
-    margin-bottom: 48px;
+    /*margin-bottom: 48px;*/
     resize: none;
     position: relative;
     padding-right: 0;
@@ -2414,6 +2512,35 @@ form input[type="submit"] {
 .contact-items-container{
     width: 60%;
   }
+
+
+
+
+/*submit button*/
+
+    form input[type="submit"] {
+    width: 100px;
+    height: 100px;
+    bottom: 0px;
+    border: 0;
+    color: yellow;
+    background: transparent;
+    background-image: url();
+    background: #031191;
+    background-repeat: no-repeat;
+    height: 38px;
+    text-transform: lowercase;
+    width: 100%;
+    position: inherit;
+    margin-bottom: 36px;
+    width: 100%;
+    padding: 8px;
+    /* padding-right: 17px; */
+    padding-left: 16px;
+    margin-left: 8px;
+
+    }
+
 
 
 }
@@ -2496,6 +2623,26 @@ form input[type="submit"] {
     width: 90%;
   }
 
+
+
+section.menu{
+  padding-top: 26px;
+}
+
+
+.menu-tabs {
+    padding-top: 0;
+    background: #F2C217;
+}
+
+
+.hours p{
+      font-size: 14px;
+}
+
+.schedule .hours, .schedule .address {
+    font-size: 14px;
+  }
 
 
 }
